--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
             <div class="left-div"></div>
             <div class="center-div"></div>
             <div class="right-div"></div>
+            <div class="animation_adapt_test">Hello World</div>
         </div>
+        <p id="text-display"></p>
         <script type="text/javascript" src="editor.js"></script>
     </body>
 </html>
